Fix menu alignment

--- a/src/global.scss
+++ b/src/global.scss
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-size: 16px;
+  font-size: 14px;
   font-family: "Noto Sans KR", Verdana, Geneva, Tahoma, sans-serif;
 }
 
